--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
 						  <TD height="30" colSpan=3 class=content_title><span style="margin-top: 5px; margin-bottom: 5px; line-height:150%;"><span class="style121"><A name=researchint id="researchint"></A></span>
                 <b>$ echo <font color="#E84A27">"I will teach <a href="https://systems-seminar-uiuc.github.io/", target="_blank">CS 591: Systems and Networking Seminar</a> in Spring 2019. Anyone interested in SysNet research is very welcomed."</font></b>
                 <br>
-		<b>$ echo "I will teach <a href="cs598-fa18", target="_blank">CS 598: Reliability of Cloud-Scale Systems</a> in Fall 2018. Checkout the <a href="cs598-fa18/readings.html", target="_blank">schedule</a>."</b>
+		<b>$ echo "I will teach <a href="https://cs598txu-uiuc.github.io/fall18/", target="_blank">CS 598: Reliability of Cloud-Scale Systems</a> in Fall 2018. Checkout the <a href="https://cs598txu-uiuc.github.io/fall18/readings.html", target="_blank">schedule</a>."</b>
                 <br>
 		<b>$ echo "Our paper on mitigating datacenter-level failures will appear at <a href="https://www.usenix.org/conference/osdi18", target="_blank">OSDI'18</a>."</b>
                 <br>
@@ -337,8 +337,9 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
 						  <TR>
 						  <TD class=content_title>&nbsp;</TD>
 					      <TD class=content width="96%">
-						        <p class="STYLE223">Spring 2019 CS 591: System and Networking Seminar</p>
-							<p class="STYLE223">Fall 2018 <a href="https://tianyin.github.io/cs598-fa18/" target="_blank">CS 598: Reliability of Cloud-Scale Systems</a></p>
+                    <p class="STYLE223">Spring 2019 <a href="https://cs598txu-uiuc.github.io/spring19/" target="_blank">CS 598: Reliable Software Systems</a></p>
+						        <p class="STYLE223">Spring 2019 <a href="https://systems-seminar-uiuc.github.io/" target="_blank">CS 591: System and Networking Seminar</a></p>
+							      <p class="STYLE223">Fall 2018 <a href="https://cs598txu-uiuc.github.io/fall18/" target="_blank">CS 598: Reliability of Cloud-Scale Systems</a></p>
 						  </TD>
                           </TR>
 
