--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   })();
 
 </script>
-<META content="Tianyin Xu,computer systems and networks" name="keywords">
+<META content="Tianyin Xu; Computer Science; Software; Systems" name="keywords">
 <META http-equiv=Content-Type content="text/html; charset=utf-8">
 <META http-equiv=Refresh content=1800>
 <META content="MSHTML 6.00.2900.2096" name=GENERATOR>
@@ -270,15 +270,15 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
                       <TBODY>
 						  <TR>
 						  <TD height="30" colSpan=3 class=content_title><span style="margin-top: 5px; margin-bottom: 5px; line-height:150%;"><span class="style121"><A name=researchint id="researchint"></A></span>
-                <b>$ echo <font color="#E84A27">"I will teach <a href="https://systems-seminar-uiuc.github.io/", target="_blank">CS 591: Systems and Networking Seminar</a> in Spring 2019. Anyone interested in SysNet research is very welcomed."</font></b>
+                <b>$ echo <font color="#E84A27">"I am teaching <a href="https://cs598txu-uiuc.github.io/spring19/", target="_blank">CS 598 (TXU): Reliable Software Systems</a> in Spring 2019. Checkout the <a href="https://cs598txu-uiuc.github.io/spring19/readings.html", target="_blank">schedule</a>."</font></b>
                 <br>
-		<b>$ echo "I will teach <a href="https://cs598txu-uiuc.github.io/fall18/", target="_blank">CS 598: Reliability of Cloud-Scale Systems</a> in Fall 2018. Checkout the <a href="https://cs598txu-uiuc.github.io/fall18/readings.html", target="_blank">schedule</a>."</b>
+                <b>$ echo <font color="#E84A27">"I am teaching <a href="https://systems-seminar-uiuc.github.io/", target="_blank">CS 591 (SN): Systems and Networking Seminar</a> in Spring 2019. Anyone interested in SysNet research is very welcomed."</font></b>
                 <br>
 		<b>$ echo "Our paper on mitigating datacenter-level failures will appear at <a href="https://www.usenix.org/conference/osdi18", target="_blank">OSDI'18</a>."</b>
                 <br>
 		<b>$ echo "Our study on datacenter network reliability will appear at <a href="https://conferences.sigcomm.org/imc/2018/", target="_blank">IMC'18</a>."</b>
 		<br>
-                <b>$ echo <font color="#FA6300">"I will <a href="https://cs.illinois.edu/news/cs-illinois-welcomes-eight-new-faculty", target="_blank">join</a> CS @ UIUC as an Assistant Professor in Fall 2018."</font></b>
+                <b>$ echo <font color="#E84A27">"I will <a href="https://cs.illinois.edu/news/cs-illinois-welcomes-eight-new-faculty", target="_blank">join</a> CS @ UIUC as an Assistant Professor in Fall 2018."</font></b>
                 <br>
                 <b>$ echo<font color="#3b5998"> "I will be a Visiting Scientist @
                   <a href="https://www.facebook.com/", target="_blank">Facebook</a>'s Core Systems before joining UIUC."</font></b><br> <b>$ echo<font color="#006A96"> "I will be defending my Ph.D. thesis (<a href="papers/dissertation.pdf" target="_blank">pdf</a>) on 8/29/17."</font></b> </span></TD>
