--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
 						  <TD height="30" colSpan=3 class=content_title><span style="margin-top: 5px; margin-bottom: 5px; line-height:150%;"><span class="style121"><A name=researchint id="researchint"></A></span>
                 <b>$ echo <font color="#E84A27">"I am teaching <a href="https://cs598txu-uiuc.github.io/spring19/", target="_blank">CS 598 (TXU): Reliable Software Systems</a> in Spring 2019. Checkout the <a href="https://cs598txu-uiuc.github.io/spring19/readings.html", target="_blank">schedule</a>."</font></b>
                 <br>
-                <b>$ echo <font color="#E84A27">"I am teaching <a href="https://systems-seminar-uiuc.github.io/", target="_blank">CS 591 (SN): Systems and Networking Seminar</a> in Spring 2019. Anyone interested in SysNet research is very welcomed."</font></b>
+                <b>$ echo <font color="#E84A27">"I am teaching <a href="https://systems-seminar-uiuc.github.io/", target="_blank">CS 591 (SN): Systems and Networking Seminar</a> in Spring 2019. Anyone interested in SysNet research is very welcome."</font></b>
                 <br>
 		<b>$ echo "Our paper on mitigating datacenter-level failures will appear at <a href="https://www.usenix.org/conference/osdi18", target="_blank">OSDI'18</a>."</b>
                 <br>
