--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
                       <TR>
                         <TD class=content_title>&nbsp;</TD>
                           <TD class=content width="96%">
-			<p class="STYLE223">2019 <a href="https://www.sigops.org/sosp/sosp19/" target="_blank">SOSP</a></p>
+			                  <p class="STYLE223">2019 <a href="https://www.sigops.org/sosp/sosp19/" target="_blank">SOSP</a>, <a href="https://edgesys19.cm.in.tum.de/" target="_blank">EdgeSys</a></p>
                         <p class="STYLE223">2018 <a href="http://conferences.inf.ed.ac.uk/EuroDW2018/" target="_blank">EuroSys DW</a>, <a href="https://www.sigmobile.org/mobisys/2018/workshops/edgesys18/" target="_blank">EdgeSys</a>, <a href="http://icdcs2018.ocg.at" target="_blank">ICDCS</a></p>
                         <p class="STYLE223">2017 <a href="https://www.sigops.org/sosp/sosp17/src.html" target="_blank">SOSP SRC</a></p>
                         <p class="STYLE223">2015 <a href="https://www.usenix.org/conference/lisa15" target="_blank">USENIX LISA</a> (academic review committee)</p>
