--- a/publication.html
+++ b/publication.html
@@ -66,7 +66,7 @@ td.papers {
 						<br>
 						Justin Meza, Tianyin Xu, Kaushik Veeraraghavan, and Onur Mutlu
 						<br>
-						In Proceedings of the 2018 Internet Measurement Conference (<font color="#083b89"><b>IMC'18</b></font>), Boston, MA, Oct. 31 - Nov. 2, 2018.
+						In Proceedings of the 18th Internet Measurement Conference (<font color="#083b89"><b>IMC'18</b></font>), Boston, MA, Oct. 31 - Nov. 2, 2018.
 					</span>
 				</div>
 			</td>
