--- a/index.html
+++ b/index.html
@@ -353,6 +353,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
 						  <TR>
 						  <TD class=content_title>&nbsp;</TD>
 					      <TD class=content width="96%">
+						      	<p class="STYLE223">2018&nbsp; UIUC List of Teachers Ranked as Excellent</p>
 							<p class="STYLE223">2017&nbsp; UCSD CSE Doctoral Award for Research</p>
 							<p class="STYLE223">2016&nbsp; Jay Lepreau Best Paper Award at OSDI</p>
 							<p class="STYLE223">2010&nbsp; Erasmus Mundus LiSUM Scholarship</p>
