--- a/index.html
+++ b/index.html
@@ -272,18 +272,8 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
 						  <TD height="30" colSpan=3 class=content_title><span style="margin-top: 5px; margin-bottom: 5px; line-height:150%;"><span class="style121"><A name=researchint id="researchint"></A></span>
                 <b>$ echo <font color="#E84A27">"Join us on UIUC SysNet Slack channels: <a href="https://join.slack.com/t/uiuc-sysnet/signup", target="_blank">uiuc-sysnet.slack.com</a>."</font></b>
                 <br>
-                <b>$ echo <font color="#E84A27">"I am teaching <a href="https://cs598txu-uiuc.github.io/spring19/", target="_blank">CS 598 (TXU): Reliable Software Systems</a> in Spring 2019. Checkout the <a href="https://cs598txu-uiuc.github.io/spring19/readings.html", target="_blank">schedule</a>."</font></b>
-                <br>
-                <b>$ echo <font color="#E84A27">"I am teaching <a href="https://systems-seminar-uiuc.github.io/", target="_blank">CS 591 (SN): Systems and Networking Seminar</a> in Spring 2019. Anyone interested in SysNet research is very welcome."</font></b>
-                <br>
-		<b>$ echo "Our paper on mitigating datacenter-level failures will appear at <a href="https://www.usenix.org/conference/osdi18", target="_blank">OSDI'18</a>."</b>
-                <br>
-		<b>$ echo "Our study on datacenter network reliability will appear at <a href="https://conferences.sigcomm.org/imc/2018/", target="_blank">IMC'18</a>."</b>
-		<br>
-                <b>$ echo <font color="#E84A27">"I will <a href="https://cs.illinois.edu/news/cs-illinois-welcomes-eight-new-faculty", target="_blank">join</a> CS @ UIUC as an Assistant Professor in Fall 2018."</font></b>
-                <br>
-                <b>$ echo<font color="#3b5998"> "I will be a Visiting Scientist @
-                  <a href="https://www.facebook.com/", target="_blank">Facebook</a>'s Core Systems before joining UIUC."</font></b><br> <b>$ echo<font color="#006A96"> "I will be defending my Ph.D. thesis (<a href="papers/dissertation.pdf" target="_blank">pdf</a>) on 8/29/17."</font></b> </span></TD>
+                <b>$ echo <font color="#E84A27">"I will be teaching <a href="https://cs523-uiuc.github.io/fall19/", target="_blank">CS 523: Advanced Operating Systems</a> in Fall 2019. Checkout the <a href="https://cs523-uiuc.github.io/fall19/readings.html", target="_blank">schedule</a>."</font></b>
+              </TD>
                           </TR>
 							          <TD width="0.5%">&nbsp;</TD>
 
@@ -339,6 +329,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
 						  <TR>
 						  <TD class=content_title>&nbsp;</TD>
 					      <TD class=content width="96%">
+                    <p class="STYLE223">Fall 2019 <a href="https://cs523-uiuc.github.io/fall19/" target="_blank">CS 523: Advanced Operating Systems</a></p>
                     <p class="STYLE223">Spring 2019 <a href="https://cs598txu-uiuc.github.io/spring19/" target="_blank">CS 598: Reliable Software Systems</a></p>
 						        <p class="STYLE223">Spring 2019 <a href="https://systems-seminar-uiuc.github.io/" target="_blank">CS 591: System and Networking Seminar</a></p>
 							      <p class="STYLE223">Fall 2018 <a href="https://cs598txu-uiuc.github.io/fall18/" target="_blank">CS 598: Reliability of Cloud-Scale Systems</a></p>
@@ -353,7 +344,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
 						  <TR>
 						  <TD class=content_title>&nbsp;</TD>
 					      <TD class=content width="96%">
-						      	<p class="STYLE223">2018&nbsp; UIUC List of Teachers Ranked as Excellent</p>
+						  <p class="STYLE223">2018&nbsp; UIUC List of Teachers Ranked as Excellent</p>
 							<p class="STYLE223">2017&nbsp; UCSD CSE Doctoral Award for Research</p>
 							<p class="STYLE223">2016&nbsp; Jay Lepreau Best Paper Award at OSDI</p>
 							<p class="STYLE223">2010&nbsp; Erasmus Mundus LiSUM Scholarship</p>
