--- a/award.html
+++ b/award.html
@@ -83,8 +83,13 @@ div.Section1
 					<blockquote>
                         <div align="justify" class="STYLE4">
                         <p>
-												<span style="font-size: 12pt; font-family: Times New Roman;">2018 &nbsp; UIUC List of Teachers Ranked as Excellent</span>
+												<span style="font-size: 12pt; font-family: Times New Roman;">2019 (Spring) &nbsp; UIUC List of Teachers Ranked as Excellent</span>
                         </div>
+						<p></p>
+												<div align="justify" class="STYLE4">
+												<p>
+												<span style="font-size: 12pt; font-family: Times New Roman;">2018 (Fall) &nbsp; UIUC List of Teachers Ranked as Excellent</span>
+												</div>
 						<p></p>
 												<div align="justify" class="STYLE4">
 												<p><span style="font-size: 12pt; font-family: Times New Roman;">2017 &nbsp; UCSD CSE Doctoral Award for Research</span>
