--- a/publication.html
+++ b/publication.html
@@ -56,6 +56,39 @@ td.papers {
   <!--DWLayoutTable-->
   <tbody>
 
+    <tr>
+    	<td class="date"><font color="#083b89">SOSP'19</font></td>
+  		<td class="papers">
+				<div align="justify" class="STYLE4">
+					<p></p>
+						<span style="font-size: 12pt;">
+							<strong>Taiji: Managing Global User Traffic for Large-Scale Internet Services at the Edge </strong> [<a href="papers/sosp19.pdf" target="_blank">pdf</a> | <a href="papers/sosp19.ps" target="_blank">ps</a> | <a href="papers/sosp19.bib" target="_blank">bib</a>]
+						<br>
+            David Chou, Tianyin Xu, Kaushik Veeraraghavan, Andy Newell, Sonia Margulis, Lin Xiao,
+            Pol Mauri Ruiz, Justin Meza, Kiryong Ha, Shruti Padmanabha, Kevin Cole, and Dmitri Perelman
+						<br>
+						In Proceedings of the 27th ACM Symposium on Operating Systems Principles (<font color="#083b89"><b>SOSP'19</b></font>), Huntsville, Ontario, Canada, Oct. 27-30, 2019.
+					</span>
+				</div>
+			</td>
+		</tr>
+
+    <tr>
+    	<td class="date"><font color="#083b89">MobiCom'19</font></td>
+  		<td class="papers">
+				<div align="justify" class="STYLE4">
+					<p></p>
+						<span style="font-size: 12pt;">
+							<strong>Mobile Gaming on Personal Computers with Direct Android Emulation</strong> [<a href="papers/mobicom19.pdf" target="_blank">pdf</a> | <a href="papers/mobicom19.ps" target="_blank">ps</a> | <a href="papers/mobicom19.bib" target="_blank">bib</a>]
+						<br>
+            Qifan Yang, Zhenhua Li, Yunhao Liu, Hai Long, Yuanchao Huang, Jiaming He, Tianyin Xu, and Ennan Zhai
+						<br>
+						In Proceedings of the 25th Annual International Conference on Mobile Computing and Networking (<font color="#083b89"><b>MobiCom'19</b></font>), Los Cabos, Mexico, Oct 21-25, 2019.
+					</span>
+				</div>
+			</td>
+		</tr>
+
 		<tr>
     	<td class="date"><font color="#083b89">IMC'18</font></td>
   		<td class="papers">
