--- a/index.html
+++ b/index.html
@@ -387,7 +387,23 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
                         <p class="STYLE223">2015 <a href="https://www.usenix.org/conference/lisa15" target="_blank">USENIX LISA</a> (academic review committee)</p>
                           </TD>
                       </TR>
-              <TD width="0.5%">&nbsp;</TD>
+
+                      <TD width="0.5%">&nbsp;</TD>
+                          <TR>
+                          <TD height="30" colSpan=3 class=content_title><span style="margin-top: 5px; margin-bottom: 5px"><span class="style121"><A name=review id="review"></A></span><b>$ sudo cat students</b></span></TD>
+                          </TR>
+                          <TR>
+                            <TD class=content_title>&nbsp;</TD>
+                              <TD class=content width="96%">
+    			                        <p class="STYLE223">Qingrong Chen</p>
+                                  <p class="STYLE223">Neil Zhao, co-advised with Professor <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a></p>
+                                  <p class="STYLE223"><a href="https://wenyu.io/" target="_blank">Wenyu Wang</a>, co-advised with Professor <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a></p>
+                                  <p class="STYLE223">Sam Cheng, co-advised with Professor <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a></p>
+                                  <p class="STYLE223">Xudong Sun</p>
+                             </TD>
+                          </TR>
+
+                  <TD width="0.5%">&nbsp;</TD>
 
 
 				      <TR>
