--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
 					      <TD class=content width="96%">
                     					<p class="STYLE223">Fall 2019 <a href="https://cs523-uiuc.github.io/fall19/" target="_blank">CS 523: Advanced Operating Systems</a></p>
 						      	<p class="STYLE223">Fall 2019 <a href="https://systems-seminar-uiuc.github.io/fall19/" target="_blank">CS 591(SN): System Reading Group</a></p>
-						        <p class="STYLE223">Fall 2019 <a href="https://systems-seminar-uiuc.github.io/fall19/" target="_blank">CS 591(SE): Software Engineering Seminar</a></p>
+						        <p class="STYLE223">Fall 2019 <a href="https://wiki.illinois.edu//wiki/display/SoftEng" target="_blank">CS 591(SE): Software Engineering Seminar</a></p>
                     					<p class="STYLE223">Spring 2019 <a href="https://cs598txu-uiuc.github.io/spring19/" target="_blank">CS 598: Reliable Software Systems</a></p>
 						        <p class="STYLE223">Spring 2019 <a href="https://systems-seminar-uiuc.github.io/spring19/" target="_blank">CS 591: System and Networking Seminar</a></p>
 							<p class="STYLE223">Fall 2018 <a href="https://cs598txu-uiuc.github.io/fall18/" target="_blank">CS 598: Reliability of Cloud-Scale Systems</a></p>
