--- a/index.html
+++ b/index.html
@@ -396,7 +396,8 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
                           <TR>
                             <TD class=content_title>&nbsp;</TD>
                               <TD class=content width="96%">
-    			                        <p class="STYLE223">Qingrong Chen</p>
+				  <p class="STYLE223">Elaine Ang</p>
+    			          <p class="STYLE223">Qingrong Chen</p>
                                   <p class="STYLE223">Neil Zhao, co-advised with Professor <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a></p>
                                   <p class="STYLE223"><a href="https://wenyu.io/" target="_blank">Wenyu Wang</a>, co-advised with Professor <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a></p>
                                   <p class="STYLE223">Sam Cheng, co-advised with Professor <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a></p>
