--- a/index.html
+++ b/index.html
@@ -346,12 +346,12 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
 						  <TR>
 						  <TD class=content_title>&nbsp;</TD>
 					      <TD class=content width="96%">
-                <p class="STYLE223">2019 (Spring)&nbsp; UIUC List of Teachers Ranked as Excellent</p>
-						  	<p class="STYLE223">2018 (Fall)&nbsp; UIUC List of Teachers Ranked as Excellent</p>
-							  <p class="STYLE223">2017&nbsp; UCSD CSE Doctoral Award for Research</p>
-							  <p class="STYLE223">2016&nbsp; Jay Lepreau Best Paper Award at OSDI</p>
-							  <p class="STYLE223">2010&nbsp; Erasmus Mundus LiSUM Scholarship</p>
-						  	<p class="STYLE223">2009&nbsp; Best Paper Award for International Conference on Communications</p>
+                                                      <p class="STYLE223">2019 (Spring)&nbsp; UIUC List of Teachers Ranked as Excellent</p>
+						      <p class="STYLE223">2018 (Fall)&nbsp; UIUC List of Teachers Ranked as Excellent</p>
+					              <p class="STYLE223">2017&nbsp; UCSD CSE Doctoral Award for Research</p>
+						      <p class="STYLE223">2016&nbsp; Jay Lepreau Best Paper Award at OSDI</p>
+						      <p class="STYLE223">2010&nbsp; Erasmus Mundus LiSUM Scholarship</p>
+						      <p class="STYLE223">2009&nbsp; Best Paper Award for International Conference on Communications</p>
 						</TD>
             </TR>
                     <TD width="0.5%">&nbsp;</TD>
@@ -397,9 +397,9 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
                             <TD class=content_title>&nbsp;</TD>
                               <TD class=content width="96%">
 				  <p class="STYLE223">Elaine Ang</p>
-    			          <p class="STYLE223">Qingrong Chen (<font color="red">Siebel Scholar Award!</font>)</p>
+    			          <p class="STYLE223">Qingrong Chen (<font color="red">Siebel Scholar Award</font>)</p>
                                   <p class="STYLE223">Neil Zhao, co-advised with Professor <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a></p>
-                                  <p class="STYLE223"><a href="https://wenyu.io/" target="_blank">Wenyu Wang</a>, co-advised with Professor <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a></p>
+                                  <p class="STYLE223"><a href="https://wenyu.io/" target="_blank">Wenyu Wang</a>, co-advised with Professor <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a> (<font color="red">3M Foundation Fellowship</font>)</p>
                                   <p class="STYLE223">Sam Cheng, co-advised with Professor <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a></p>
                                   <p class="STYLE223">Xudong Sun</p>
                              </TD>
