--- a/index.html
+++ b/index.html
@@ -272,7 +272,9 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
 						  <TD height="30" colSpan=3 class=content_title><span style="margin-top: 5px; margin-bottom: 5px; line-height:150%;"><span class="style121"><A name=researchint id="researchint"></A></span>
                 <b>$ echo <font color="#E84A27">"Join us on UIUC SysNet Slack channels: <a href="https://join.slack.com/t/uiuc-sysnet/signup", target="_blank">uiuc-sysnet.slack.com</a>."</font></b>
                 <br>
-                <b>$ echo <font color="#E84A27">"I will teach <a href="https://cs523-uiuc.github.io/fall19/", target="_blank">CS 523: Advanced Operating Systems</a> in Fall 2019. Checkout the <a href="https://cs523-uiuc.github.io/fall19/readings.html", target="_blank">schedule</a>."</font></b>
+                <b>$ echo <font color="#E84A27">"I'm teaching <a href="https://cs523-uiuc.github.io/fall19/", target="_blank">CS 523: Advanced Operating Systems</a> in Fall 2019. Checkout the <a href="https://cs523-uiuc.github.io/fall19/readings.html", target="_blank">schedule</a>."</font></b>
+		<b>$ echo <font color="#E84A27">"I'm organizing <a href="https://systems-seminar-uiuc.github.io/fall19/", target="_blank">CS 591 (SN): System Reading Group</a> in Fall 2019."</font></b>
+		<b>$ echo <font color="#E84A27">"I'm co-organizing (with <a href="http://misailo.cs.illinois.edu/", target="_blank">Sasa Misailovic</a>) <a href="https://wiki.illinois.edu//wiki/display/SoftEng", target="_blank">CS 591 (SE): Software Engineering Seminar</a> in Fall 2019."</font></b>					  
               </TD>
                           </TR>
 							          <TD width="0.5%">&nbsp;</TD>
