--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
 		<br>
 		<b>$ echo <font color="#E84A27">"I'm organizing <a href="https://systems-seminar-uiuc.github.io/fall19/", target="_blank">CS 591 (SN): System Reading Group</a> in Fall 2019."</font></b>
 		<br>
-		<b>$ echo <font color="#E84A27">"I'm co-organizing (with <a href="http://misailo.cs.illinois.edu/", target="_blank">Sasa Misailovic</a>) <a href="https://wiki.illinois.edu//wiki/display/SoftEng", target="_blank">CS 591 (SE): Software Engineering Seminar</a> in Fall 2019."</font></b>					  
+		<b>$ echo <font color="#E84A27">"I'm co-organizing (with <a href="http://misailo.cs.illinois.edu/", target="_blank">Sasa</a> and <a href="http://mir.cs.illinois.edu/marinov/", target="_blank">Darko</a>) <a href="https://wiki.illinois.edu//wiki/display/SoftEng", target="_blank">CS 591 (SE): Software Engineering Seminar</a> in Fall 2019."</font></b>					  
               </TD>
                           </TR>
 							          <TD width="0.5%">&nbsp;</TD>
