--- a/publication.html
+++ b/publication.html
@@ -62,7 +62,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 						<span style="font-size: 12pt;">
-							<strong>Taiji: Managing Global User Traffic for Large-Scale Internet Services at the Edge </strong> [<a href="papers/sosp19.pdf" target="_blank">pdf</a> | <a href="papers/sosp19.ps" target="_blank">ps</a> | <a href="papers/sosp19.bib" target="_blank">bib</a>]
+							<strong>Taiji: Managing Global User Traffic for Large-Scale Internet Services at the Edge </strong> [<a href="papers/sosp19.pdf" target="_blank">pdf</a> | <a href="papers/sosp19.bib" target="_blank">bib</a>]
 						<br>
             David Chou, Tianyin Xu, Kaushik Veeraraghavan, Andy Newell, Sonia Margulis, Lin Xiao,
             Pol Mauri Ruiz, Justin Meza, Kiryong Ha, Shruti Padmanabha, Kevin Cole, and Dmitri Perelman
@@ -79,7 +79,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 						<span style="font-size: 12pt;">
-							<strong>Mobile Gaming on Personal Computers with Direct Android Emulation</strong> [<a href="papers/mobicom19.pdf" target="_blank">pdf</a> | <a href="papers/mobicom19.ps" target="_blank">ps</a> | <a href="papers/mobicom19.bib" target="_blank">bib</a>]
+							<strong>Mobile Gaming on Personal Computers with Direct Android Emulation</strong> [<a href="papers/mobicom19.pdf" target="_blank">pdf</a> | <a href="papers/mobicom19.bib" target="_blank">bib</a>]
 						<br>
             Qifan Yang, Zhenhua Li, Yunhao Liu, Hai Long, Yuanchao Huang, Jiaming He, Tianyin Xu, and Ennan Zhai
 						<br>
@@ -95,7 +95,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 						<span style="font-size: 12pt;">
-							<strong>A Large-Scale Study of Data Center Network Reliability </strong> [<a href="papers/imc18.pdf" target="_blank">pdf</a> | <a href="papers/imc18.ps" target="_blank">ps</a> | <a href="papers/imc18.bib" target="_blank">bib</a>]
+							<strong>A Large-Scale Study of Data Center Network Reliability </strong> [<a href="papers/imc18.pdf" target="_blank">pdf</a> | <a href="papers/imc18.bib" target="_blank">bib</a>]
 						<br>
 						Justin Meza, Tianyin Xu, Kaushik Veeraraghavan, and Onur Mutlu
 						<br>
@@ -111,7 +111,7 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
 						<span style="font-size: 12pt;">
-							<strong>Maelstrom: Mitigating Datacenter-level Disasters by Draining Interdependent Traffic Safely and Efficiently </strong> [<a href="papers/osdi18.pdf" target="_blank">pdf</a> | <a href="papers/osdi18.ps" target="_blank">ps</a> | <a href="papers/osdi18.bib" target="_blank">bib</a>]
+							<strong>Maelstrom: Mitigating Datacenter-level Disasters by Draining Interdependent Traffic Safely and Efficiently </strong> [<a href="papers/osdi18.pdf" target="_blank">pdf</a> | <a href="papers/osdi18.bib" target="_blank">bib</a>]
 						<br>
 						Kaushik Veeraraghavan, Justin Meza, Scott Michelson, Sankaralingam Panneerselvam, Alex Gyori, David Chou, Sonia Margulis, Daniel Obenshain, Shruti Padmanabha, Ashish Shah, Yee Jiun Song, and Tianyin Xu
 						<br>
@@ -127,7 +127,7 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
 		      <span style="font-size: 12pt;">
-						<strong>Mining Container Image Repositories for Software Configurations and Beyond</strong> [<a href="papers/icse-nier18.pdf" target="_blank">pdf</a> | <a href="papers/icse-nier18.ps" target="_blank">ps</a> | <a href="papers/icse-nier18.bib" target="_blank">bib</a>]
+						<strong>Mining Container Image Repositories for Software Configurations and Beyond</strong> [<a href="papers/icse-nier18.pdf" target="_blank">pdf</a> | <a href="papers/icse-nier18.bib" target="_blank">bib</a>]
 						<br>
 						Tianyin Xu and Darko Marinov
 						<br>
@@ -143,7 +143,7 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
 		      <span style="font-size: 12pt;">
-						<strong>Towards Web-based Delta Synchronization for Cloud Storage Services</strong> [<a href="papers/fast18.pdf" target="_blank">pdf</a> | <a href="papers/fast18.ps" target="_blank">ps</a> | <a href="papers/fast18.bib" target="_blank">bib</a>]
+						<strong>Towards Web-based Delta Synchronization for Cloud Storage Services</strong> [<a href="papers/fast18.pdf" target="_blank">pdf</a> | <a href="papers/fast18.bib" target="_blank">bib</a>]
 						<br>
 						He Xiao, Zhenhua Li, Ennan Zhai, Tianyin Xu, Yang Li, Yonghe Wang, Quanlu Zhang, and Yao Liu
 						<br>
@@ -159,7 +159,7 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
 		      <span style="font-size: 12pt;">
-						<strong>How Do System Administrators Resolve Access-Denied Issues in the Real World? </strong> [<a href="papers/chi17.pdf" target="_blank">pdf</a> | <a href="papers/chi17.ps" target="_blank">ps</a> | <a href="papers/chi17.bib" target="_blank">bib</a>]
+						<strong>How Do System Administrators Resolve Access-Denied Issues in the Real World? </strong> [<a href="papers/chi17.pdf" target="_blank">pdf</a> | <a href="papers/chi17.bib" target="_blank">bib</a>]
 						<br>
 						Tianyin Xu, Han Min Naing, Le Lu, and Yuanyuan Zhou
 						<br>
@@ -175,7 +175,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 					<span style="font-size: 12pt;">
-						<strong>Early Detection of Configuration Errors to Reduce Failure Damage</strong> [<a href="papers/osdi16.pdf" target="_blank">pdf</a> | <a href="papers/osdi16.ps" target="_blank">ps</a> | <a href="papers/osdi16.bib" target="_blank">bib</a>]
+						<strong>Early Detection of Configuration Errors to Reduce Failure Damage</strong> [<a href="papers/osdi16.pdf" target="_blank">pdf</a> | <a href="papers/osdi16.bib" target="_blank">bib</a>]
 						<br>
 						Tianyin Xu, Xinxin Jin, Peng Huang, Yuanyuan Zhou, Shan Lu, Long Jin, and Shankar Pasupathy
 						<br>
@@ -193,7 +193,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 					<span style="font-size: 12pt;">
-						<strong>DefDroid: Towards a More Defensive Mobile OS Against Disruptive App Behavior</strong> [<a href="papers/mobisys16.pdf" target="_blank">pdf</a> | <a href="papers/mobisys16.ps" target="_blank">ps</a> | <a href="papers/mobisys16.bib" target="_blank">bib</a>]
+						<strong>DefDroid: Towards a More Defensive Mobile OS Against Disruptive App Behavior</strong> [<a href="papers/mobisys16.pdf" target="_blank">pdf</a> | <a href="papers/mobisys16.bib" target="_blank">bib</a>]
 						<br>
 						Peng Huang, Tianyin Xu, Xinxin Jin, and Yuanyuan Zhou
 						<br>
@@ -209,7 +209,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 					<span style="font-size: 12pt;">
-						<strong>NChecker: Saving Mobile App Developers from Network Disruptions</strong> [<a href="papers/eurosys16.pdf" target="_blank">pdf</a> | <a href="papers/eurosys16.ps" target="_blank">ps</a> | <a href="papers/eurosys16.bib" target="_blank">bib</a>]
+						<strong>NChecker: Saving Mobile App Developers from Network Disruptions</strong> [<a href="papers/eurosys16.pdf" target="_blank">pdf</a> | <a href="papers/eurosys16.bib" target="_blank">bib</a>]
 						<br>
 						Xinxin Jin, Peng Huang, Tianyin Xu, and Yuanyuan Zhou
 						<br>
@@ -225,7 +225,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 					<span style="font-size: 12pt;">
-						<strong>Exploring Cross-Application Cellular Traffic Optimization with Baidu TrafficGuard</strong> [<a href="papers/nsdi16.pdf" target="_blank">pdf</a> | <a href="papers/nsdi16.ps" target="_blank">ps</a> | <a href="papers/nsdi16.bib" target="_blank">bib</a>]
+						<strong>Exploring Cross-Application Cellular Traffic Optimization with Baidu TrafficGuard</strong> [<a href="papers/nsdi16.pdf" target="_blank">pdf</a> | <a href="papers/nsdi16.bib" target="_blank">bib</a>]
 						<br>
 						Zhenhua Li, Weiwei Wang, Tianyin Xu, Xin Zhong, Xiang-Yang Li, Yunhao Liu, Christo Wilson, and Ben Y. Zhao
 						<br>
@@ -241,7 +241,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 					<span style="font-size: 12pt;">
-						<strong>Offline Downloading in China: A Comparative Study</strong> [<a href="papers/imc15.pdf" target="_blank">pdf</a> | <a href="papers/imc15.ps" target="_blank">ps</a> | <a href="papers/imc15.bib" target="_blank">bib</a>]
+						<strong>Offline Downloading in China: A Comparative Study</strong> [<a href="papers/imc15.pdf" target="_blank">pdf</a> | <a href="papers/imc15.bib" target="_blank">bib</a>]
 						<br>
 						Zhenhua Li, Christo Wilson, Tianyin Xu, Yao Liu, Zhen Lu, and Yinlong Wang
 						<br>
@@ -257,7 +257,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 					<span style="font-size: 12pt;">
-						<strong>Hey, You Have Given Me Too Many Knobs! Understanding and Dealing with Over-Designed Configuration in System Software</strong> [<a href="papers/fse15.pdf" target="_blank">pdf</a> | <a href="papers/fse15.ps" target="_blank">ps</a> | <a href="papers/fse15.bib" target="_blank">bib</a>]
+						<strong>Hey, You Have Given Me Too Many Knobs! Understanding and Dealing with Over-Designed Configuration in System Software</strong> [<a href="papers/fse15.pdf" target="_blank">pdf</a> | <a href="papers/fse15.bib" target="_blank">bib</a>]
 						<br>
 						Tianyin Xu, Long Jin, Xuepeng Fan, Yuanyuan Zhou, Shankar Pasupathy, and Rukma Talwadker
 						<br>
@@ -273,7 +273,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 					<span style="font-size: 12pt;">
-						<strong>Systems Approaches to Tackling Configuration Errors: A Survey</strong></span> [<a href="papers/csur.pdf" target="_blank">pdf</a> | <a href="papers/csur.ps" target="_blank">ps</a> | <a href="papers/csur.bib" target="_blank">bib</a>]
+						<strong>Systems Approaches to Tackling Configuration Errors: A Survey</strong></span> [<a href="papers/csur.pdf" target="_blank">pdf</a> | <a href="papers/csur.bib" target="_blank">bib</a>]
 						<br>
 						Tianyin Xu and Yuanyuan Zhou
 						<br>
@@ -289,7 +289,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 					<span style="font-size: 12pt;">
-						<strong>Towards Network-level Efficiency for Cloud Storage Services</strong> [<a href="papers/imc14.pdf" target="_blank">pdf</a> | <a href="papers/imc14.ps" target="_blank">ps</a> | <a href="papers/imc14.bib" target="_blank">bib</a>]
+						<strong>Towards Network-level Efficiency for Cloud Storage Services</strong> [<a href="papers/imc14.pdf" target="_blank">pdf</a> | <a href="papers/imc14.bib" target="_blank">bib</a>]
 						<br>
 						Zhenhua Li, Cheng Jin, Tianyin Xu, Christo Wilson, Yao Liu, Linsong Cheng, Yunhao Liu, Yafei Dai, and Zhi-Li Zhang
 						<br>
@@ -305,7 +305,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 					<span style="font-size: 12pt;">
-						<strong> EnCore: Exploiting System Environment and Correlation Information for Misconfiguration Detection </strong> [<a href="papers/asplos14.pdf" target="_blank">pdf</a> | <a href="papers/asplos14.ps" target="_blank">ps</a> | <a href="papers/asplos14.bib" target="_blank">bib</a>]
+						<strong> EnCore: Exploiting System Environment and Correlation Information for Misconfiguration Detection </strong> [<a href="papers/asplos14.pdf" target="_blank">pdf</a> | <a href="papers/asplos14.bib" target="_blank">bib</a>]
 						<br>
 						Jiaqi Zhang, Lakshminarayanan Renganarayana, Xiaolan Zhang, Niyu Ge, Vasanth Bala, Tianyin Xu, and Yuanyuan Zhou
 						<br>
@@ -321,7 +321,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 					<span style="font-size: 12pt;">
-						<strong> Do Not Blame Users for Misconfigurations </strong> [<a href="papers/sosp13.pdf" target="_blank">pdf</a> | <a href="papers/sosp13.ps" target="_blank">ps</a> | <a href="papers/sosp13.bib" target="_blank">bib</a>]
+						<strong> Do Not Blame Users for Misconfigurations </strong> [<a href="papers/sosp13.pdf" target="_blank">pdf</a> | <a href="papers/sosp13.bib" target="_blank">bib</a>]
 						<br>
 						Tianyin Xu, Jiaqi Zhang, Peng Huang, Jing Zheng, Tianwei Sheng, Ding Yuan, Yuanyuan Zhou, and Shankar Pasupathy
 						<br>
