--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
 		<br>
 		<b>$ echo <font color="#E84A27">"I'm organizing <a href="https://systems-seminar-uiuc.github.io/fall19/", target="_blank">CS 591 (SN): System Reading Group</a> in Fall 2019."</font></b>
 		<br>
-		<b>$ echo <font color="#E84A27">"I'm co-organizing (with <a href="http://misailo.cs.illinois.edu/", target="_blank">Sasa</a> and <a href="http://mir.cs.illinois.edu/marinov/", target="_blank">Darko</a>) <a href="https://wiki.illinois.edu//wiki/display/SoftEng", target="_blank">CS 591 (SE): Software Engineering Seminar</a> in Fall 2019."</font></b>					  
+		<b>$ echo <font color="#E84A27">"I'm co-organizing (with <a href="http://misailo.cs.illinois.edu/", target="_blank">Sasa</a> and <a href="http://mir.cs.illinois.edu/marinov/", target="_blank">Darko</a>) <a href="https://wiki.illinois.edu//wiki/display/SoftEng", target="_blank">CS 591 (SE): Software Engineering Seminar</a> in Fall 2019."</font></b>
               </TD>
                           </TR>
 							          <TD width="0.5%">&nbsp;</TD>
@@ -316,11 +316,11 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
 		          <TD width="0.5%">&nbsp;</TD>
 
 							<TR>
-						  <TD height="30" colSpan=3 class=content_title><span style="margin-top: 5px; margin-bottom: 5px"><span class="style121"><A name=researchint id="researchint"></A></span><b>$ ls -l <a href="publication.html">publication</a></b></span></TD>
+						  <TD height="30" colSpan=3 class=content_title><span style="margin-top: 5px; margin-bottom: 5px"><span class="style121"><A name=researchint id="researchint"></A></span><b>$ ls -l <a href="pub.html">publication</a></b></span></TD>
                           </TR>			  <TR>
                           <TD class=content_title>&nbsp;</TD>
 					      <TD class=content width="96%">
-							<p class="STYLE223">lrwxrwxrwx 1 tianyin tianyin 4 Feb 30 12:61 publication ->  <a href="publication.html"><b>publication.html</b></a></p>
+							<p class="STYLE223">lrwxrwxrwx 1 tianyin tianyin 4 Feb 30 12:61 publication ->  <a href="pub.html"><b>pub.html</b></a></p>
 						  </TD>
                           </TR>
 
