--- a/index.html
+++ b/index.html
@@ -292,15 +292,17 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
     </p>
 
     <p class="STYLE223"> Before joining UIUC, I spent one year as a Visiting Scientist at <a href="https://www.facebook.com/", target="_blank">Facebook</a>'s Core Systems,
-      working on dealing with datacenter-level failures (besides eating free food). I spent six wonderful years in <a href="http://www.sysnet.ucsd.edu/sysnet/"  target="_blank">sysnet</a> at the <a href="http://cseweb.ucsd.edu/"  target="_blank">University of California San Diego (UCSD)</a> until <a href="http://cseweb.ucsd.edu/~yyzhou/" target="_blank">my rock star advisor</a> kicked me out (I wished to be a tenured grad student).
+      working on dealing with datacenter-level failures (besides eating free food). I spent six wonderful years in <a href="http://www.sysnet.ucsd.edu/sysnet/"  target="_blank">sysnet</a> at the <a href="http://cseweb.ucsd.edu/"  target="_blank">University of California San Diego (UCSD)</a> until <a href="http://cseweb.ucsd.edu/~yyzhou/" target="_blank">my rock star advisor</a> kicked me out (I wish to be a tenured grad student<sup><a href="#ref1">1</a></sup>).
       I worked with <a href="http://www.netapp.com/atg/"  target="_blank">NetApp</a> to play with product storage systems and data.
       I had a short experience at <a href="<a href="https://whova.com/whova-event-app/" target="_blank">Whova</a>
       where I learned dedication.
       Before UCSD, I worked in Germany for 1.5 years at <a href="http://www.uni-goettingen.de/"  target="_blank">Goettingen</a>.
     </p>
 
-    <p class="STYLE223">As a "<a href="http://phdcomics.com/comics/archive_print.php?comicid=1040" target="_blank">professor</a>", my meta-advice is to be serious and sincere to life and work. Winter is coming! Don't fight a fake war or someone else's war. Fight for what really matters to the living and the dead!
+    <p class="STYLE223">As a "<a href="http://phdcomics.com/comics/archive_print.php?comicid=1040" target="_blank">professor</a>", my meta-advice is to be serious and sincere to life and work. Winter is coming! Don't fight a fake war or someone else's war. Fight for what really matters to the living or the dead.
     </p>
+
+    <p class="STYLE223"><sup><a name="ref1">1 </a></sup>I am constantly looking for such a job. Please contact me if you have or know one.</p>
                           </TR>
 		          <TD width="0.5%">&nbsp;</TD>
 						  <TR>
@@ -310,7 +312,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
                           <TD class=content_title>&nbsp;</TD>
 					      <TD class=content width="96%">
 							<p class="STYLE223">The goal of my research is to make computer systems reliable and secure. My mission is to help today's systems defend against all kinds of errors and defects, such as software bugs, configuration errors, and design flaws. I am proud that some of my research helps improve real software systems. See the list of <a href="report.html">issues</a> I helped.</p>
-							<p class="STYLE223">As a systems guy, I am interested in various inter-disciplinary black magic, e.g., program analysis, machine learning, and NLP. My view of systems research is to build the right swords to kill the dragon (not windmills!).</p>
+							<p class="STYLE223">As a systems person, I am interested in various inter-disciplinary black magic, e.g., program analysis, machine learning, and NLP. My view of systems research is to build the right swords to kill the dragon (not windmills!).</p>
 						  </TD>
                           </TR>
 		          <TD width="0.5%">&nbsp;</TD>
