--- a/pub.html
+++ b/pub.html
@@ -57,12 +57,29 @@ td.papers {
   <tbody>
 
     <tr>
+    	<td class="date"><font color="#083b89">CCS'19</font></td>
+  		<td class="papers">
+				<div align="justify" class="STYLE4">
+					<p></p>
+						<span style="font-size: 12pt;">
+							<strong>Towards Continuous Access Control Validation and Forensics</strong> [<a href="pub/ccs19.pdf" target="_blank">pdf</a> | <a href="pub/ccs19.bib" target="_blank">bib</a>]
+						<br>
+            Chengcheng Xiang, Yudong Wu, Bingyu Shen, Mingyao Shen, Tianyin Xu,
+            Yuanyuan Zhou, Cindy Moore, Xinxin Jin, and Tianwei Sheng,
+						<br>
+						In Proceedings of the 26th ACM Conference on Computer and Communications Security  (<font color="#083b89"><b>CCS'19</b></font>), London, UK, Nov. 11-15, 2019.
+					</span>
+				</div>
+			</td>
+		</tr>
+
+    <tr>
     	<td class="date"><font color="#083b89">SOSP'19</font></td>
   		<td class="papers">
 				<div align="justify" class="STYLE4">
 					<p></p>
 						<span style="font-size: 12pt;">
-							<strong>Taiji: Managing Global User Traffic for Large-Scale Internet Services at the Edge </strong> [<a href="pub/sosp19.pdf" target="_blank">pdf</a> | <a href="pub/sosp19.bib" target="_blank">bib</a>]
+							<strong>Taiji: Managing Global User Traffic for Large-Scale Internet Services at the Edge</strong> [<a href="pub/sosp19.pdf" target="_blank">pdf</a> | <a href="pub/sosp19.bib" target="_blank">bib</a>]
 						<br>
             David Chou, Tianyin Xu, Kaushik Veeraraghavan, Andy Newell, Sonia Margulis, Lin Xiao,
             Pol Mauri Ruiz, Justin Meza, Kiryong Ha, Shruti Padmanabha, Kevin Cole, and Dmitri Perelman
