--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
     </p>
 
     <p class="STYLE223"> Before joining UIUC, I spent a year at <a href="https://www.facebook.com/", target="_blank">Facebook</a>'s Core Systems,
-      working on dealing with datacenter-level failures (besides eating free food). I spent six wonderful years in <a href="http://www.sysnet.ucsd.edu/sysnet/"  target="_blank">sysnet</a> at the <a href="http://cseweb.ucsd.edu/"  target="_blank">University of California San Diego (UCSD)</a> until <a href="http://cseweb.ucsd.edu/~yyzhou/" target="_blank">my rock star advisor</a> kicked me out (I wished to be a tenured grad student<sup><a href="#ref1">1</a></sup>).
+      working on dealing with datacenter-level failures (besides eating free food). I spent six wonderful years at <a href="http://www.sysnet.ucsd.edu/sysnet/"  target="_blank">sysnet</a> at the <a href="http://cseweb.ucsd.edu/"  target="_blank">University of California San Diego (UCSD)</a> until <a href="http://cseweb.ucsd.edu/~yyzhou/" target="_blank">my rock star advisor</a> kicked me out (I wished to be a tenured grad student<sup><a href="#ref1">1</a></sup>).
       I worked with <a href="http://www.netapp.com/atg/"  target="_blank">NetApp</a> to study production data on tap.
       I had a short experience at <a href="<a href="https://whova.com/whova-event-app/" target="_blank">Whova</a>
       where I learned dedication.
