--- a/index.html
+++ b/index.html
@@ -293,11 +293,11 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
 
     <p class="STYLE223"> Before joining UIUC, I spent a year at <a href="https://www.facebook.com/", target="_blank">Facebook</a>'s Core Systems,
       working on dealing with data center failures (besides enjoying free food).
-      I spent six wonderful years at <a href="http://www.sysnet.ucsd.edu/sysnet/"  target="_blank">sysnet</a> at the <a href="http://cseweb.ucsd.edu/"  target="_blank">University of California San Diego (UCSD)</a> until <a href="http://cseweb.ucsd.edu/~yyzhou/" target="_blank">my rock star advisor</a> kicked me out (I wished to be a tenured grad student<sup><a href="#ref1">1</a></sup>).
+      I spent six wonderful years at <a href="http://www.sysnet.ucsd.edu/sysnet/"  target="_blank">sysnet</a> at the <a href="http://cseweb.ucsd.edu/"  target="_blank">University of California San Diego</a> until <a href="http://cseweb.ucsd.edu/~yyzhou/" target="_blank">my rock star advisor</a> kicked me out (I wished to be a tenured grad student<sup><a href="#ref1">1</a></sup>).
       I worked with <a href="http://www.netapp.com/atg/"  target="_blank">NetApp</a> to study production data on tap.
       I had a short experience at <a href="<a href="https://whova.com/whova-event-app/" target="_blank">Whova</a>
       where I learned dedication.
-      Before UCSD, I worked in Germany for 1.5 years at <a href="http://www.uni-goettingen.de/"  target="_blank">Goettingen</a>.
+      I worked in Germany for 1.5 years at <a href="http://www.uni-goettingen.de/" target="_blank">Goettingen</a> before grad school.
     </p>
 
     <p class="STYLE223">As a "<a href="http://phdcomics.com/comics/archive_print.php?comicid=1040" target="_blank">professor</a>", my meta-advice is to be serious and sincere to life and work. Winter is coming! Don't fight a fake war or someone else's war. Fight for what really matters to the living or the dead.
