--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
       I worked with <a href="http://www.netapp.com/atg/"  target="_blank">NetApp</a> to study production data on tap.
       I had a short experience at <a href="<a href="https://whova.com/whova-event-app/" target="_blank">Whova</a>
       where I learned dedication.
-      I worked in Germany for 1.5 years at <a href="http://www.uni-goettingen.de/" target="_blank">Goettingen</a> before grad school.
+      I worked in Germany (and backpacked Europe) for 1.5 years at <a href="http://www.uni-goettingen.de/" target="_blank">Goettingen</a> before starting grad school.
     </p>
 
     <p class="STYLE223">As a "<a href="http://phdcomics.com/comics/archive_print.php?comicid=1040" target="_blank">professor</a>", my meta-advice is to be serious and sincere to life and work. Winter is coming! Don't fight a fake war or someone else's war. Fight for what really matters to the living or the dead.
