--- a/pub.html
+++ b/pub.html
@@ -62,7 +62,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 						<span style="font-size: 12pt;">
-							<strong>Towards Continuous Access Control Validation and Forensics</strong> [<a href="pub/ccs19.pdf" target="_blank">pdf</a> | <a href="pub/ccs19.bib" target="_blank">bib</a>]
+							<strong>Towards Continuous Access Control Validation and Forensics</strong> [<a href="pub/pdiff.pdf" target="_blank">pdf</a>]
 						<br>
             Chengcheng Xiang, Yudong Wu, Bingyu Shen, Mingyao Shen, Haochen Huang, Tianyin Xu,
             Yuanyuan Zhou, Cindy Moore, Xinxin Jin, and Tianwei Sheng,
@@ -79,7 +79,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 						<span style="font-size: 12pt;">
-							<strong>Taiji: Managing Global User Traffic for Large-Scale Internet Services at the Edge</strong> [<a href="pub/sosp19.pdf" target="_blank">pdf</a> | <a href="pub/sosp19.bib" target="_blank">bib</a>]
+							<strong>Taiji: Managing Global User Traffic for Large-Scale Internet Services at the Edge</strong> [<a href="pub/taiji.pdf" target="_blank">pdf</a>]
 						<br>
             David Chou, Tianyin Xu, Kaushik Veeraraghavan, Andy Newell, Sonia Margulis, Lin Xiao,
             Pol Mauri Ruiz, Justin Meza, Kiryong Ha, Shruti Padmanabha, Kevin Cole, and Dmitri Perelman
