--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
                             <TD class=content_title>&nbsp;</TD>
                               <TD class=content width="96%">
 				  <p class="STYLE223">Elaine Ang</p>
-    			          <p class="STYLE223">Qingrong Chen (<font color="red">Siebel Scholar Award</font>)</p>
+    			          <p class="STYLE223">Qingrong Chen (<a href="http://www.cs.illinois.edu/news/meet-siebel-scholars-class-2020" target="_blank"><font color="red">Siebel Scholar Award</font></a>)</p>
                                   <p class="STYLE223">Neil Zhao, co-advised with Professor <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a></p>
                                   <p class="STYLE223"><a href="https://wenyu.io/" target="_blank">Wenyu Wang</a>, co-advised with Professor <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a> (<font color="red">3M Foundation Fellowship</font>)</p>
                                   <p class="STYLE223">Sam Cheng, co-advised with Professor <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a></p>
