--- a/travel.html
+++ b/travel.html
@@ -408,6 +408,7 @@ div.Section1
 						     <li>Sioux City, IA (2018) </li>
 						     <li>Sioux Falls, SD (2018)</li>
 						     <li>Solvang, CA (2017) </li>
+						     <li>Springfield, IL (2019) </li>
 						     <li>State College, PA (2017) </li>
 						     <li>Sunnyvale, CA (2012, 2015) </li>
 						     <li>Urbana-Champaign, IL (2017)</li>
