--- a/travel.html
+++ b/travel.html
@@ -146,6 +146,7 @@ div.Section1
                                                 </li>
 						<li><font color="#083b89"><b>Canada</b></font>:
                                                   <ul style="list-style-type:circle">
+					            <li>Huntsville (2019)</li>
                                                     <li>Waterloo (2017)</li>
                                                   </ul>
                                                 </li>
