--- a/pub.html
+++ b/pub.html
@@ -81,7 +81,7 @@ td.papers {
 						<span style="font-size: 12pt;">
 							<strong>Taiji: Managing Global User Traffic for Large-Scale Internet Services at the Edge</strong> [<a href="pub/taiji.pdf" target="_blank">pdf</a>]
 						<br>
-            David Chou, Tianyin Xu, Kaushik Veeraraghavan, Andy Newell, Sonia Margulis, Lin Xiao,
+            David Chou, Tianyin Xu, Kaushik Veeraraghavan, Andrew Newell, Sonia Margulis, Lin Xiao,
             Pol Mauri Ruiz, Justin Meza, Kiryong Ha, Shruti Padmanabha, Kevin Cole, and Dmitri Perelman
 						<br>
 						In Proceedings of the 27th ACM Symposium on Operating Systems Principles (<font color="#083b89"><b>SOSP'19</b></font>), Huntsville, Ontario, Canada, Oct. 27-30, 2019.
