--- a/index.html
+++ b/index.html
@@ -409,6 +409,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
                                   <p class="STYLE223"><a href="https://wenyu.io/" target="_blank">Wenyu Wang</a>, co-advised with Professor <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a> (<font color="red">3M Foundation Fellowship</font>)</p>
                                   <p class="STYLE223">Sam Cheng, co-advised with Professor <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a></p>
                                   <p class="STYLE223">Xudong Sun</p>
+				  <p class="STYLE223">Jack Chen</p>
                              </TD>
                           </TR>
 
