--- a/index.html
+++ b/index.html
@@ -410,6 +410,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
                                   <p class="STYLE223">Sam Cheng, co-advised with Professor <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a></p>
                                   <p class="STYLE223">Xudong Sun</p>
 				  <p class="STYLE223">Jack Chen</p>
+				  <p class="STYLE223">Andrew Yoo</p>
                              </TD>
                           </TR>
 
