--- a/index.html
+++ b/index.html
@@ -403,12 +403,11 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
 
                       <TD width="0.5%">&nbsp;</TD>
                           <TR>
-                          <TD height="30" colSpan=3 class=content_title><span style="margin-top: 5px; margin-bottom: 5px"><span class="style121"><A name=review id="review"></A></span><b>$ sudo cat students</b></span></TD>
+                          <TD height="30" colSpan=3 class=content_title><span style="margin-top: 5px; margin-bottom: 5px"><span class="style121"><A name=review id="review"></A></span><b>$ sudo cat gang</b></span></TD>
                           </TR>
                           <TR>
                             <TD class=content_title>&nbsp;</TD>
                               <TD class=content width="96%">
-				  <p class="STYLE223">Elaine Ang</p>
     			          <p class="STYLE223">Qingrong Chen (<a href="http://www.cs.illinois.edu/news/meet-siebel-scholars-class-2020" target="_blank"><font color="red">Siebel Scholar Award</font></a>)</p>
                                   <p class="STYLE223">Neil Zhao, co-advised by Professor <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a></p>
                                   <p class="STYLE223"><a href="https://wenyu.io/" target="_blank">Wenyu Wang</a>, co-advised by Professor <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a> (<font color="red">3M Foundation Fellowship</font>)</p>
@@ -416,6 +415,17 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
                                   <p class="STYLE223">Xudong Sun</p>
 				  <p class="STYLE223">Jack Chen</p>
 				  <p class="STYLE223">Andrew Yoo</p>
+                             </TD>
+                          </TR>
+			      
+	             <TD width="0.5%">&nbsp;</TD>
+                          <TR>
+                          <TD height="30" colSpan=3 class=content_title><span style="margin-top: 5px; margin-bottom: 5px"><span class="style121"><A name=review id="review"></A></span><b>$ sudo cat alumni</b></span></TD>
+                          </TR>
+                          <TR>
+                            <TD class=content_title>&nbsp;</TD>
+                              <TD class=content width="96%">
+				  <p class="STYLE223">Elaine Ang (M.S. 2019) &rarr; Google</p>
                              </TD>
                           </TR>
 
