--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
                           <TR>
                             <TD class=content_title>&nbsp;</TD>
                               <TD class=content width="96%">
-				  <p class="STYLE223">Elaine Ang (M.S. 2019) &rarr; Google</p>
+				  <p class="STYLE223"><a href="http://www.elaine-ang.space/" target="_blank">Elaine Ang</a> (M.S. 2019) &rarr; Google</p>
                              </TD>
                           </TR>
 
