--- a/pub.html
+++ b/pub.html
@@ -265,6 +265,22 @@ td.papers {
 				</div>
 			</td>
 		</tr>
+	
+		<tr>
+			<td class="date"><font color="#083b89">arXiv</font></td>
+			<td class="papers">
+				<div align="justify" class="STYLE4">
+					<p></p>
+					<span style="font-size: 12pt;">
+						<strong>An HCI View of Configuration Problems</strong> [<a href="pub/hci_config.pdf" target="_blank">pdf</a>]
+						<br>
+						Tianyin Xu, Vineet Pandey, and Scott Klemmer
+						<br>
+						arXiv:1601.01747, Jan. 8, 2016.
+					</span>
+				</div>
+			</td>
+		</tr>
 
 		<tr>
 			<td class="date"><font color="#083b89">NSDI'16</font></td>
