--- a/pub.html
+++ b/pub.html
@@ -120,23 +120,71 @@ td.papers {
 			</td>
 		</tr>
 
-    <tr>
+      <tr>
     	<td class="date"><font color="#083b89">MobiCom'19</font></td>
   		<td class="papers">
-				<div align="justify" class="STYLE4">
-					<p></p>
-						<span style="font-size: 12pt;">
-							<strong>Mobile Gaming on Personal Computers with Direct Android Emulation</strong> [<a href="pub/mobicom19.pdf" target="_blank">pdf</a> | <a href="pub/mobicom19.bib" target="_blank">bib</a>]
+			<div align="justify" class="STYLE4">
+				<p></p>
+					<span style="font-size: 12pt;">
+						<strong>Mobile Gaming on Personal Computers with Direct Android Emulation</strong> [<a href="pub/mobicom19.pdf" target="_blank">pdf</a> | <a href="pub/mobicom19.bib" target="_blank">bib</a>]
 						<br>
             					Qifan Yang, Zhenhua Li, Yunhao Liu, Hai Long, Yuanchao Huang, Jiaming He, Tianyin Xu, and Ennan Zhai
 						<br>
 						In Proceedings of the 25th Annual International Conference on Mobile Computing and Networking (<font color="#083b89"><b>MobiCom'19</b></font>), Los Cabos, Mexico, Oct 21-25, 2019.
 					</span>
-				</div>
-			</td>
-		</tr>
+			</div>
+		</td>
+	</tr>
+	
+	<tr>
+    	<td class="date"><font color="#083b89">MobiSys'19</font></td>
+  		<td class="papers">
+			<div align="justify" class="STYLE4">
+				<p></p>
+					<span style="font-size: 12pt;">
+						<strong>Understanding Fileless Attacks on Linux-based IoT Devices with HoneyCloud</strong> [<a href="pub/iot.pdf" target="_blank">pdf</a> | <a href="pub/iot.bib" target="_blank">bib</a>]
+						<br>
+            					Fan Dang, Zhenhua Li, Yunhao Liu, Ennan Zhai, Qi Alfred Chen, Tianyin Xu, Yan Chen, and Jingyu Yang
+						<br>
+						In Proceedings of the 17th ACM International Conference on Mobile Systems, Applications, and Services (<font color="#083b89"><b>MobiSys'19</b></font>), Seoul, South Korea, Jun. 17-21, 2019.
+					</span>
+			</div>
+		</td>
+	</tr>
+	
+	<tr>
+    	<td class="date"><font color="#083b89">MobiSys'19</font></td>
+  		<td class="papers">
+			<div align="justify" class="STYLE4">
+				<p></p>
+					<span style="font-size: 12pt;">
+						<strong>An In-depth Study of Commercial MVNO: Measurement and Optimization</strong> [<a href="pub/mvno.pdf" target="_blank">pdf</a> | <a href="pub/mvno.bib" target="_blank">bib</a>]
+						<br>
+            					Ao Xiao, Yunhao Liu, Yang Li, Feng Qian, Zhenhua Li, Sen Bai, Yao Liu, Tianyin Xu, and Xianlong Xin
+						<br>
+						In Proceedings of the 17th ACM International Conference on Mobile Systems, Applications, and Services (<font color="#083b89"><b>MobiSys'19</b></font>), Seoul, South Korea, Jun. 17-21, 2019.
+					</span>
+			</div>
+		</td>
+	</tr>
+	
+	<tr>
+    	<td class="date"><font color="#083b89">MobiSys'19</font></td>
+  		<td class="papers">
+			<div align="justify" class="STYLE4">
+				<p></p>
+					<span style="font-size: 12pt;">
+						<strong>Understanding and Detecting Overlay-based Android Malware at Market Scales</strong> [<a href="pub/overlay.pdf" target="_blank">pdf</a> | <a href="pub/overlay.bib" target="_blank">bib</a>]
+						<br>
+            					Yuxuan Yan, Zhenhua Li, Qi Alfred Chen, Christo Wilson, Tianyin Xu, Ennan Zhai, Yong Li, and Yunhao Liu
+						<br>
+						In Proceedings of the 17th ACM International Conference on Mobile Systems, Applications, and Services (<font color="#083b89"><b>MobiSys'19</b></font>), Seoul, South Korea, Jun. 17-21, 2019.
+					</span>
+			</div>
+		</td>
+	</tr>
 
-		<tr>
+	<tr>
     	<td class="date"><font color="#083b89">IMC'18</font></td>
   		<td class="papers">
 				<div align="justify" class="STYLE4">
