--- a/pub.html
+++ b/pub.html
@@ -61,7 +61,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 						<span style="font-size: 12pt;">
-							<strong>Set the Configurations for the Heart of the OS: On the Practicality of Operating System Kernel Debloating</strong> [<a href="pub/" target="_blank">pdf</a>]
+							<strong>Set the Configurations for the Heart of the OS: On the Practicality of Operating System Kernel Debloating</strong> [<a href="pub/" target="_blank">tbd</a>]
 						<br>
             					Hsuan-Chi Kuo, Jianyan Chen, Sibin Mohan, and Tianyin Xu,
 						<br>
@@ -76,7 +76,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 						<span style="font-size: 12pt;">
-							<strong>Elastic Cuckoo Page Tables: Rethinking Virtual Memory Translation for Parallelism</strong> [<a href="pub/" target="_blank">pdf</a>]
+							<strong>Elastic Cuckoo Page Tables: Rethinking Virtual Memory Translation for Parallelism</strong> [<a href="pub/" target="_blank">tbd</a>]
 						<br>
             					Dimitrios Skarlatos, Apostolos Kokolis, Tianyin Xu, and Josep Torrellas,
 						<br>
