--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
 						  <TR>
 						  <TD class=content_title>&nbsp;</TD>
 					      <TD class=content width="96%">
-						        <p class="STYLE223">Spring 2020 <a href="https://cs423-uiuc.github.io/fall19/" target="_blank">CS 423: Operating System Design</a></p>
+						        <p class="STYLE223">Spring 2020 <a href="https://cs423-uiuc.github.io/spring20/" target="_blank">CS 423: Operating System Design</a></p>
                     					<p class="STYLE223">Fall 2019 <a href="https://cs523-uiuc.github.io/fall19/" target="_blank">CS 523: Advanced Operating Systems</a></p>
 						      	<p class="STYLE223">Fall 2019 <a href="https://systems-seminar-uiuc.github.io/fall19/" target="_blank">CS 591(SN): System Reading Group</a></p>
 						        <p class="STYLE223">Fall 2019 <a href="https://wiki.illinois.edu//wiki/display/SoftEng" target="_blank">CS 591(SE): Software Engineering Seminar</a></p>
