--- a/pub.html
+++ b/pub.html
@@ -85,6 +85,21 @@ td.papers {
 				</div>
 			</td>
 		</tr>
+    <tr>
+    	<td class="date"><font color="#083b89">FAST'20</font></td>
+  		<td class="papers">
+				<div align="justify" class="STYLE4">
+					<p></p>
+						<span style="font-size: 12pt;">
+							<strong>Lock-Free Collaboration Support for Cloud Storage Services with Operation Inference and Transformation </strong> [<a href="pub/pdiff.pdf" target="_blank">tbd</a>]
+						<br>
+            					Jian Chen, Minghao Zhao, Zhenhua Li, Ennan Zhai, Feng Qian, Hongyi Chen, and Yunhao Liu, and Tianyin Xu,
+						<br>
+						In Proceedings of the 18th USENIX Conference on File and Storage Technologies  (<font color="#083b89"><b>FAST'20</b></font>), Santa Clara, CA, Feb. 24-27, 2020.
+					</span>
+				</div>
+			</td>
+		</tr>
 	
     <tr>
     	<td class="date"><font color="#083b89">CCS'19</font></td>
