--- a/pub.html
+++ b/pub.html
@@ -76,7 +76,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 						<span style="font-size: 12pt;">
-							<strong>Elastic Cuckoo Page Tables: Rethinking Virtual Memory Translation for Parallelism</strong> [<a href="pub/" target="_blank">tbd</a>]
+							<strong>Elastic Cuckoo Page Tables: Rethinking Virtual Memory Translation for Parallelism</strong> [<a href="pub/cuckoo_pt.pdf" target="_blank">pdf</a>]
 						<br>
             					Dimitrios Skarlatos, Apostolos Kokolis, Tianyin Xu, and Josep Torrellas,
 						<br>
