--- a/pub.html
+++ b/pub.html
@@ -91,7 +91,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 						<span style="font-size: 12pt;">
-							<strong>Lock-Free Collaboration Support for Cloud Storage Services with Operation Inference and Transformation </strong> [<a href="pub/pdiff.pdf" target="_blank">tbd</a>]
+							<strong>Lock-Free Collaboration Support for Cloud Storage Services with Operation Inference and Transformation </strong> [<a href="pub/ufc.pdf" target="_blank">pdf</a>]
 						<br>
             					Jian Chen, Minghao Zhao, Zhenhua Li, Ennan Zhai, Feng Qian, Hongyi Chen, and Yunhao Liu, and Tianyin Xu,
 						<br>
