--- a/index.html
+++ b/index.html
@@ -428,6 +428,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
                                   <p class="STYLE223">Xudong Sun</p>
 				  <p class="STYLE223">Jack Chen</p>
 				  <p class="STYLE223">Andrew Yoo</p>
+				  <p class="STYLE223">Yuanliang Zhang (visiting student)</p>
                              </TD>
                           </TR>
 
