--- a/travel.html
+++ b/travel.html
@@ -165,7 +165,7 @@ div.Section1
                                                     <li>Jiangyin (2008) </li>
                                                     <li>Kunshan (2009) </li>
                                                     <li>Mudanjiang (1993) </li>
-                                                    <li>Nanjing (undergrad+master, 2003-2009) </li>
+                                                    <li>Nanjing (2003-2009) </li>
                                                     <li>Nanling (2013) </li>
                                                     <li>Shanghai (hometown) </li>
                                                     <li>Shaoxing (2002) </li>
@@ -221,7 +221,7 @@ div.Section1
 						     <li>Frankfurt (2010, 2015) </li>
 						     <li>Füssen (2010) </li>
 						     <li>Goslar (2010) </li>
-						     <li>Göttingen (work, 2010-2011) </li>
+						     <li>Göttingen (2010-2011) </li>
 						     <li>Hamburg (2010) </li>
 						     <li>Hamm (2010) </li>
 						     <li>Hanover (2010) </li>
@@ -361,22 +361,22 @@ div.Section1
 						     <li>Aberdeen, WA (2018) </li>
 						     <li>Alexandria, VA (2018) </li>
 						     <li>Annapolis, MD (2017) </li>
-					       <li>Arlington, VA (2018) </li>
+					             <li>Arlington, VA (2018) </li>
 						     <li>Atlanta, GA (2017) </li>
 						     <li>Baltimore, MD (2017) </li>
 						     <li>Berkeley, CA (2015, 2018) </li>
 						     <li>Big Sur, CA (2017) </li>
-                 <li>Boston, MA (2019) </li>
+                                                     <li>Boston, MA (2019) </li>
 						     <li>Broomfield, CO (2014) </li>
 						     <li>Carmel-by-the-Sea, CA (2017) </li>
 						     <li>Cheyenne, WY (2018) </li>
-                 <li>Chicago, IL (too many) </li>
+                                                     <li>Chicago, IL (too many) </li>
 						     <li>Custer, SD (2018) </li>
 						     <li>Denver, CO (2017) </li>
 						     <li>Des Moines, IA (2018) </li>
 						     <li>Elko, NV (2018) </li>
 						     <li>Farmington, PA (2013) </li>
-					       <li>Fremont, CA (2017-2018) </li>
+					             <li>Fremont, CA (2017-2018) </li>
 						     <li>Irvine, CA (2016) </li>
 						     <li>Keystone, SD (2018) </li>
 						     <li>Lake Tahoe (north &amp; south), CA / NV (2018) </li>
@@ -384,7 +384,7 @@ div.Section1
 						     <li>Los Angeles, CA (2012, 2016) </li>
 						     <li>Menlo Park, CA (2017-2018) </li>
 						     <li>Millbrae, CA (2018)</li>
-                 <li>Monterey, CA (2015) </li>
+                                                     <li>Monterey, CA (2015) </li>
 						     <li>Morro Bay, CA (2017) </li>
 						     <li>Newark, CA (2017-2018) </li>
 						     <li>New York City, NY (2017) </li>
@@ -397,7 +397,7 @@ div.Section1
 						     <li>Rock Springs, WY (2018) </li>
 						     <li>Sacramento, CA (2018) </li>
 						     <li>Salt Lake City, CA (2018) </li>
-						     <li>San Diego, CA (phd, 2011-2017) </li>
+						     <li>San Diego, CA (2011-2017) </li>
 						     <li>San Francisco, CA (too many) </li>
 						     <li>San Jose, CA (too many) </li>
 						     <li>Santa Barbara, CA (2017) </li>
